# agentforge-hq

./: .gitignore  AGENT_WORK_CHECK.md  ARCHITECTURE_AUDIT.md  AUDIT_REPORT.md  CLAUDE.md  CURSOR_TASKS.md  Cargo.toml  EXECUTIVE_SUMMARY.md  MASTER_TASK_LIST.md  NEXT_SPRINT_AGENT_TASKS.md  NORTH_STAR.md  PHASE0_IMPLEMENTATION_PLAN.md  PHASE0_REMAINING.md  PHASE0_SHARED_CONTRACT.md  PHASE0_WORK_CHECK.md  PRODUCT_JOURNEY.md  README.md  REFERENCE_CODE_METHODOLOGY.md  REFERENCE_REPOS.md  SESSION_LOG.md  deny.toml  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  release.yml
00-vision/: PRODUCT_PRINCIPLES.md  VISION_AND_MISSION.md
01-strategy/: COMPETITIVE_LANDSCAPE.md  MARKET_ANALYSIS.md  VALUE_PROPOSITION.md  WARDLEY_MAP.md
02-requirements/: FEATURE_CATALOG.md  PRD.md
03-architecture/: API_DESIGN.md  DATA_MODEL.md  EVENT_SYSTEM.md  MCP_INTERFACE.md  SYSTEM_ARCHITECTURE.md
04-design/: UI_DESIGN.md
05-engineering/: TESTING_STRATEGY.md
06-planning/: MILESTONES.md  RISK_REGISTER.md  ROADMAP.md  SPRINT_PLAN.md
07-methodology/: ABSORPTION_PIPELINE.md  QUALITY_GATES.md
08-reference/: FEATURE_SOURCE_MAP.md  TECH_REFERENCES.md
archive/: REFERENCE_REPOS.md  STRATEGIC_ASSESSMENT.md  WHAT_TO_DO_NEXT.md
archive/00-vision/: PRODUCT_PRINCIPLES.md
archive/02-requirements/: PRD.md  USER_PERSONAS.md  USER_STORIES.md
archive/03-architecture/: BOUNDED_CONTEXTS.md  EVENT_SYSTEM.md
archive/04-design/: INFORMATION_ARCHITECTURE.md
archive/05-engineering/: CI_CD.md  CODING_STANDARDS.md  DEPENDENCY_GRAPH.md  TECH_STACK.md
archive/06-planning/: MILESTONES.md  RISK_REGISTER.md  ROADMAP.md  SPRINT_PLAN.md
archive/07-methodology/: ABSORPTION_PIPELINE.md  DEVELOPMENT_PROCESS.md  SUBMODULE_TRACKING.md
archive/08-reference/: FEATURE_SOURCE_MAP.md  GLOSSARY.md  TREND_26FEB_ENHANCEMENT_MAP.md
archive/planning/: CHECKLIST_RESULTS.md  CURSOR_AGENT_PROMPTS.md  OLD_VS_NEW_PARITY.md  PHASE0_REMAINING.md  PHASE1_6_AGENT_SPRINT.md
crates/forge-agent/: Cargo.toml
crates/forge-api/: Cargo.toml
crates/forge-api/src/: configurator.rs  error.rs  lib.rs  middleware.rs  openapi.rs  state.rs
crates/forge-api/src/routes/: agents.rs  analytics.rs  backends.rs  governance.rs  health.rs  hooks.rs  memory.rs  mod.rs  org.rs  personas.rs  run.rs  schedules.rs  sessions.rs  settings.rs  skills.rs  workflows.rs  ws.rs
crates/forge-app/: Cargo.toml
crates/forge-app/src/: main.rs  scheduler.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: error.rs  event_bus.rs  events.rs  ids.rs  lib.rs
crates/forge-db/: Cargo.toml
crates/forge-db/src/: batch_writer.rs  lib.rs  migrations.rs  pool.rs  unit_of_work.rs
crates/forge-db/src/repos/: agents.rs  analytics.rs  approvals.rs  compaction.rs  companies.rs  departments.rs  events.rs  goals.rs  hooks.rs  memory.rs  mod.rs  org_positions.rs  personas.rs  safety.rs  schedules.rs  sessions.rs  skills.rs  workflows.rs
crates/forge-git/: Cargo.toml
crates/forge-governance/: Cargo.toml
crates/forge-mcp/: Cargo.toml
crates/forge-mcp-bin/: Cargo.toml
crates/forge-mcp-bin/src/: main.rs
crates/forge-org/: Cargo.toml
crates/forge-persona/: Cargo.toml
crates/forge-process/: Cargo.toml
crates/forge-process/src/: backend.rs  best_of_n.rs  claude_backend.rs  concurrent.rs  context_pruner.rs  lib.rs  loop_detect.rs  parse.rs  pipeline.rs  review.rs  runner.rs  skill_router.rs  spawn.rs  stream_event.rs  task_type.rs
crates/forge-safety/: Cargo.toml
docs/: AGENTFORGE-BUILD-PLAN.md  AGENTFORGE-EXECUTIVE-SUMMARY.md  AGENTFORGE_AGENT_ROLES.md  BORROWED_IDEAS.md  CONSOLIDATION_STATUS.md  CURRENT_VS_AGENTFORGE.md  DOC_INDEX.md  E2E_SMOKE_TEST.md  ENHANCEMENT_PROPOSAL.md  EPIC1_FOUNDATION_TASKS.md  EXPANSION_PLAN.md  FORGE_AUDIT_2026_03_02.md  FORGE_KNOWLEDGE_MESSAGING_SCHEMA.md  HARVESTER_INTEGRATION.md  MCP_DESIGN.md  PHASE1_DESIGN_NOTES.md  PROPOSAL_2_3_4.md  README.md  REMAINING_APP_PLAN.md  RESEARCH_FINDINGS_2026_03_05.md  SESSION_LOG.md  STATE_OF_THE_PROJECT.md  V050_SPRINT_PLAN.md  V060_SPRINT_PLAN.md
docs/EXTERNAL_REPOS/: ASTRBOT.md  HERMES_AGENT.md  OPENCLAW.md
docs/agents/: AGENT_A2_SKILL_ROUTER.md  AGENT_A_SKILLS.md  AGENT_B2_SECURITY_MW.md  AGENT_B_TASKTYPE.md  AGENT_C2_BACKEND_TRAIT.md  AGENT_C_SCANNER.md  AGENT_D2_REVIEW_ENGINE.md  AGENT_D_POLISH.md  AGENT_E3_A_BACKEND_CONFIG.md  AGENT_E3_B_SPAWN_WIRING.md  AGENT_E3_C_HEALTH_MCP.md  AGENT_E3_D_EVENTS_VERIFY.md  AGENT_PROTOCOL.md  AGENT_R1A_DOC_SWEEP.md  AGENT_R1B_DBPATH_CLEANUP.md  AGENT_R1C_HYGIENE_LOGGING.md  AGENT_R2A_EVENTBUS.md  AGENT_R2B_CONNPOOL.md  AGENT_R2C_SAFETY_SPAWN.md  AGENT_R3A_API_TESTS.md  AGENT_R3B_UX_LOADING.md  AGENT_R3C_UX_RESPONSIVE.md  AGENT_R4A_DOCS_POLISH.md  AGENT_R4B_ACCESSIBILITY.md  AGENT_R4C_ERROR_STRATIFY.md  AGENT_R4D_VERIFY.md  AGENT_UW_A_DBPOOL_UOW.md  AGENT_UW_B_ROUTES.md  AGENT_UW_C_MCP_MAIN.md  AGENT_UW_D_VERIFY.md  AGENT_W3A_FRONTEND.md  AGENT_W3B_GOVERNANCE.md  AGENT_W3C_SESSIONS.md  AGENT_W3D_VERIFY.md  AGENT_W4A_CONFIGURATOR.md  AGENT_W4B_HOOKRECEIVER.md  AGENT_W4C_CLEANUP.md  AGENT_W5A_MCP_EXPAND.md  (+50 more)
frontend/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js
migrations/: 0001_init.sql  0002_add_cost.sql  0003_add_memory.sql  0004_add_hooks.sql  0005_scheduler_analytics.sql  0006_add_compactions.sql  0007_add_workflow_columns.sql  0008_memory_types_and_skill_rules.sql  0009_personas.sql  0010_placeholder.sql  0011_org_charts.sql  0012_agents_persona_id.sql  0013_safety_state.sql  0014_agents_backend_type.sql
review-march-15/: 00-INDEX.md  01-SITE-VS-CODEBASE-INCONSISTENCIES.md  02-FIX-PROPOSALS.md  03-SENIOR-ARCHITECTURE-REVIEW.md  04-UX-PRINCIPLES-ADOPTION-PROPOSAL.md  RESOLUTION.md
scripts/: e2e-smoke.sh  generate-api-types.sh
site-docs/: index.md
skills/: architect.md  code-review.md  debug.md  deep-research.md  document.md  explore.md  fix-bug.md  refactor.md  security-audit.md  test-writer.md
stat-qou-plan/: ARCHITECTURE_RETHINK.md  EXECUTIVE_SUMMARY.md  FINISH_FIRST.md  INSPECTION.md  MCP_DOWNSTREAM_VISION.md  PERPLEXITY_BRIEF.md  RESEARCH_FINDINGS.md  STATUS_QUO.md
tests/: integration_test.sh
(+109 files in other folders)
