[package]
name = "forge-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-api = { path = "../forge-api" }
forge-core = { path = "../forge-core" }
forge-db = { path = "../forge-db" }
forge-agent = { path = "../forge-agent" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
