[package]
name = "forge-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-api = { path = "../forge-api" }
forge-core = { path = "../forge-core" }
forge-db = { path = "../forge-db" }
forge-agent = { path = "../forge-agent" }
forge-safety = { path = "../forge-safety" }
forge-persona = { path = "../forge-persona" }
tokio = { version = "1", features = ["full"] }
chrono = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
