[package]
name = "forge-db"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-core = { path = "../forge-core" }
forge-agent = { path = "../forge-agent" }
forge-persona = { path = "../forge-persona" }
rusqlite = { workspace = true }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = "0.1"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["process"] }
cron = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
