[package]
name = "forge-process"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-core = { path = "../forge-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
